# unityobs

./: README.md
src/: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/CefModule/: .gitignore  CefModule.cpp  CefModule.h  CefModule.vcxproj  CefModule.vcxproj.filters  CefWebView.cpp  CefWebView.h  cef-view-widget.cpp  cef-view-widget.h  cefmodule-export.cpp  cefmodule-export.h  cefmodule_global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple-example.cpp  simple-example.h  ui_mainwindow.h
src/QCaptureScreen/: QCaptureScreen.cpp  QCaptureScreen.h  QCaptureScreen.qrc  QCaptureScreen.ui  QCaptureScreen.vcxproj  QCaptureScreen.vcxproj.filters  main.cpp  resource.h
src/QtCustom/: .gitignore  QtCustom.cpp  QtCustom.h  QtCustom.vcxproj  QtCustom.vcxproj.filters  Resource.qrc  TestUrlWidget.cpp  TestUrlWidget.h  alter-password.cpp  alter-password.h  asyn-request.cpp  asyn-request.h  base-web-widget.h  base-widget.cpp  base-widget.h  bottom-ctrls.cpp  bottom-ctrls.h  callback-request.cpp  callback-request.h  characters-convert.cpp  characters-convert.h  common-function.cpp  common-function.h  common.cpp  common.h  custom-config-ini.cpp  custom-config-ini.h  custom-event.h  custom-slider.cpp  custom-slider.h  custom-stylesheet.h  customer-service-base-dialog.cpp  customer-service-base-dialog.h  font-set.cpp  font-set.h  im-widget.cpp  im-widget.h  json-parser.cpp  json-parser.h  left-right-button.cpp  (+56 more)
src/QtEngineModule/: .gitignore  QtEngineModule.cpp  QtEngineModule.h  QtEngineModule.vcxproj  QtEngineModule.vcxproj.filters  base-web-widget.cpp  base-web-widget.h  qtenginemodule_global.h  webengine-widget.cpp  webengine-widget.h
src/UI/: CMakeLists.txt  api-interface.cpp  custom-global-config.cpp  custom-global-config.h  log-viewer.cpp  obs-app.cpp  obs-app.hpp  obs.manifest  platform-windows.cpp  properties-view.cpp  properties-view.hpp  (+25 more)
src/plugins/obs-mediasoup/: CMakeLists.txt  audio_device_module_wrapper.cpp  audio_device_module_wrapper.h  mediasoup-output.cpp  mediasoup-output.h  mediasoup-source.c  mediasoup-source.h  mediasoup_interface.h  mediasoup_stream.cpp  mediasoup_stream.h  obs-mediasoup-main.c  realtime_incoming_audio_source.cpp  realtime_incoming_audio_source.h  realtime_incoming_video_source.cpp  realtime_incoming_video_source.h  realtime_outputing_audio_source.cpp  realtime_outputing_audio_source.h  realtime_outputing_video_source.cpp  realtime_outputing_video_source.h
src/plugins/obs-mediasoup/libmediasoupclient/: .gitignore  CMakeLists.txt  readme.txt
src/plugins/obs-mediasoup/libmediasoupclient/doc/: 编译.txt
src/plugins/obs-mediasoup/libmediasoupclient/include/: Consumer.hpp  DataConsumer.hpp  DataProducer.hpp  Device.hpp  Handler.hpp  PeerConnection.hpp  Producer.hpp  Transport.hpp  ortc.hpp  scalabilityMode.hpp
src/plugins/obs-mediasoup/libmediasoupclient/include/sdp/: MediaSection.hpp  RemoteSdp.hpp  Utils.hpp
src/plugins/obs-mediasoup/libmediasoupclient/src/: DataProducer.cpp  Device.cpp  Handler.cpp  PeerConnection.cpp  Transport.cpp  mediasoupclient.cpp
src/plugins/obs-mediasoup/libmediasoupclient/src/sdp/: Utils.cpp
src/plugins/unity-socket/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.h  socket_thread.cpp  socket_thread.h  stdafx.h  unity-socket-interface-impl.cpp  unity-socket-interface.h  unity-socketConfig.cmake.in
(+180 files in other folders)
